--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Home</h1>
+
+<p>Logged in as: <%= current_user.username %></p>
 
 <%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
