Fetching sports works.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -23,4 +23,11 @@
             <td><%= link_to 'Destroy', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
     <% end %>
+
+
+    <% @sports.each do |sport| %>
+        <tr>
+            <td><%= sport['name'] %></td>
+        </tr>
+    <% end %>
 </table>
