--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -8,6 +8,7 @@
     <%= f.label :description %>
     <%= f.text_area :description, size: '60x12' %>
 
+    <%= select("Sport", "id", @sports.collect {|sport| [ sport['name'], sport['id'] ] }) %>
 
     <%= f.nested_fields_for :spoodle_dates do |ff| %>
         <%= ff.remove_nested_fields_link 'Remove date' %>
