--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,5 +14,9 @@
 <h2>Dates</h2>
 <%= render @event.spoodle_dates %>
 
+<h2>Invitations</h2>
+<%= render @event.invitations %>
+<%= @event.invitations.count %>
+
 <%= link_to 'Edit Event', edit_event_path(@event) %> |
 <%= link_to 'Back to Events', events_path %>
