--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -17,7 +17,7 @@
 
     <%= f.nested_fields_for :invitations do |fff| %>
         <%= fff.remove_nested_fields_link 'Remove invitation' %>
-        <%= fff.collection_select :user, User.all, :email, :email %>
+        <%= fff.collection_select :user_id, @users, :id, :username %>
     <% end %>
     <br/>
     <%= f.add_nested_fields_link :invitations, 'Add more invitations' %>
