Fixed the spoodle_date remove feature (was non-existent)

--- a/app/views/spoodle_dates/_spoodle_date.html.erb
+++ b/app/views/spoodle_dates/_spoodle_date.html.erb
@@ -4,5 +4,5 @@
 </p>
 
 <p>
-    <%= link_to 'Destroy SpoodleDate', event_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'Destroy SpoodleDate', event_spoodle_date_path(@event, spoodle_date), method: :delete, data: { confirm: 'Are you sure?' } %>
 </p>
