--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -4,5 +4,6 @@
 <%= form_for [@event, @invitation] do |f| %>
     <%= f.collection_select :user_id, @users, :id, :username %>
 
+    <%= link_to 'Cancel', @event %>
     <%= f.submit 'Create' %>
 <% end %>
