--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,6 +11,7 @@
     <tr>
         <th>Title</th>
         <th>Description</th>
+        <th>Owner</th>
         <th>Dates</th>
         <th>Invitations</th>
         <th colspan="3"></th>
@@ -20,6 +21,7 @@
         <tr>
             <td><%= event.title %></td>
             <td><%= event.description %></td>
+            <td><%= event.owner.username %></td>
             <td><%= event.spoodle_dates.map{ |spoodle_date| spoodle_date.datetime }.join(',<br/>').html_safe %></td>
             <td><%= event.invitations.map{ |invitation| invitation.user.username }.join(',<br/>').html_safe %></td>
             <td><%= link_to 'Show', event_path(event) %></td>
