User and events are now binded. You need to login as owner or invited user to have access to the events.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -30,3 +30,7 @@
         </tr>
     <% end %>
 </table>
+
+<p>Logged in as: <%= current_user.username %></p>
+
+<%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
