--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -27,6 +27,7 @@
             <td><%= link_to 'Show', event_path(event) %></td>
             <td><%= link_to 'Edit', edit_event_path(event) %></td>
             <td><%= link_to 'Destroy', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Invite a new user', new_event_invitation_path(event) %></td>
         </tr>
     <% end %>
 </table>
