--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,7 +11,10 @@
     <%= @event.description %>
 </p>
 
-<%= @event.sport_id %>
+<p>
+    <strong>Sport:</strong>
+    <%= @sport %>
+</p>
 
 
 <h2>Dates</h2>
