--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -6,7 +6,10 @@
 
     <%= f.label :description %>
     <%= f.text_area :description, size: '60x12' %>
-
+    <p>
+        <strong>Sport:</strong>
+        <%= @sport %>
+    </p>
 
     <%= f.nested_fields_for :spoodle_dates do |ff| %>
         <%= ff.remove_nested_fields_link 'Remove date' %>
