--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -35,5 +35,5 @@
 </table>
 
 <p>Logged in as: <%= current_user.username %></p>
-
+<%= @blub %>
 <%= link_to 'Sign out', destroy_user_session_path, :method => :delete %>
