--- a/app/views/spoodle_dates/_spoodle_date.html.erb
+++ b/app/views/spoodle_dates/_spoodle_date.html.erb
@@ -1,6 +1,11 @@
 <p>
-    <strong>Datetime:</strong>
-    <%= spoodle_date.datetime %>
+    <strong>From:</strong>
+    <%= spoodle_date.from %>
+</p>
+
+<p>
+    <strong>To:</strong>
+    <%= spoodle_date.to %>
 </p>
 
 <p>
