--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,7 @@
             <td><%= event.description %></td>
             <td><%= @sports[event.sport_id]['name'] %></td>
             <td><%= event.owner.username %></td>
-            <td><%= event.spoodle_dates.map{ |spoodle_date| spoodle_date.datetime }.join(',<br/>').html_safe %></td>
+            <td><%= event.spoodle_dates.map{ |spoodle_date| spoodle_date.from }.join(',<br/>').html_safe %></td>
             <td><%= event.invitations.map{ |invitation| invitation.user.username }.join(',<br/>').html_safe %></td>
             <td><%= link_to 'Show', event_path(event) %></td>
             <td><%= link_to 'Edit', edit_event_path(event) %></td>
