--- a/app/views/spoodle_dates/_spoodle_date.html.erb
+++ b/app/views/spoodle_dates/_spoodle_date.html.erb
@@ -5,18 +5,23 @@
     <strong>To:</strong>
     <%= spoodle_date.to %>
     <br/>
-    <strong>Vote:</strong>
+    <strong>Votes:</strong>
     <%= spoodle_date.votes %>
     <br/>
     <strong>Users:</strong>
-    <% spoodle_date.users.each do |user| %>
-        <%= user.username %><br/>
+    <% spoodle_date.availabilities.each do |availability| %>
+        <%= availability.user.username %>
+        <%= availability.weight %><br/>
     <% end %>
 </p>
 
 <p>
     <% unless already_assigned? spoodle_date %>
-        <%= link_to 'Assign to SpoodleDate', assign_event_spoodle_date_path(@event, spoodle_date), method: :put %>
+        <%= form_tag assign_event_spoodle_date_path(@event, spoodle_date), method: :put do %>
+            <%= label_tag :weight %>
+            <%= number_field_tag :weight, nil, :in => 0.01..1, :step => 0.01 %>
+            <%= submit_tag 'Assign to SpoodleDate' %>
+        <% end %>
     <% else %>
         <%= link_to 'Cancel SpoodleDate', cancel_event_spoodle_date_path(@event, spoodle_date), method: :put %>
     <% end %>
