Events now select a date when passing the deadline. Lot of bugs, or missing checks

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,8 @@
 <h1>Event#show</h1>
-<p>Look at that damn nice event!</p>
+
+<% flash.each do |name, msg| -%>
+    <%= content_tag :div, msg, class: name %>
+<% end -%>
 
 <p>
     <%= link_to 'Invite a new user', new_event_invitation_path(@event) %>
@@ -13,6 +16,12 @@
 <p>
     <strong>Description:</strong><br/>
     <%= @event.description %>
+</p>
+
+<p>
+    <strong>Deadline:</strong><br/>
+    <%= @event.deadline %>
+    <%= @event.is_deadline_over? ? 'Over' : 'Not over' %>
 </p>
 
 <p>
