--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,7 +4,7 @@
     <%= content_tag :div, msg, class: name %>
 <% end -%>
 
-<p>Index of all events</p>
+<h2>Index of events you own or are invited to:</h2>
 
 <%= link_to 'New event', new_event_path %>
 <table>
@@ -18,7 +18,7 @@
         <th colspan="3"></th>
     </tr>
 
-    <% @events.each do |event| %>
+    <% @current_events.each do |event| %>
         <tr>
             <td><%= event.title %></td>
             <td><%= event.description %></td>
@@ -26,6 +26,35 @@
             <td><%= event.owner.username %></td>
             <td><%= event.spoodle_dates.map{ |spoodle_date| spoodle_date.from }.join(',<br/>').html_safe %></td>
             <td><%= event.invitations.map{ |invitation| invitation.user.username }.join(',<br/>').html_safe %></td>
+            <td><%= link_to 'Show', event_path(event) %></td>
+            <td><%= link_to 'Edit', edit_event_path(event) %></td>
+            <td><%= link_to 'Destroy', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Invite a new user', new_event_invitation_path(event) %></td>
+        </tr>
+    <% end %>
+</table>
+
+<h2>Index of all definite events you own or are invited to:</h2>
+
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Sport</th>
+        <th>Owner</th>
+        <th>Date</th>
+        <th>Contributor</th>
+        <th colspan="3"></th>
+    </tr>
+
+    <% @upcoming_events.each do |event| %>
+        <tr>
+            <td><%= event.title %></td>
+            <td><%= event.description %></td>
+            <td>Implement</td>
+            <td><%= event.owner.username %></td>
+            <td><%= event.definitive_date.from %></td>
+            <td><%= event.definitive_date.availabilities.map{ |availability| availability.user.username }.join(',<br/>').html_safe %></td>
             <td><%= link_to 'Show', event_path(event) %></td>
             <td><%= link_to 'Edit', edit_event_path(event) %></td>
             <td><%= link_to 'Destroy', event_path(event), method: :delete, data: { confirm: 'Are you sure?' } %></td>
