--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="index.html"><%= fa_icon "trophy" %> <b>SPOODLE</b></a>
+    <a class="navbar-brand" href="#"><%= fa_icon "trophy" %> <b>SPOODLE</b></a>
 </div>
 <!-- /.navbar-header -->
 
@@ -249,7 +249,7 @@
                     <input type="text" class="form-control" placeholder="Search...">
                                 <span class="input-group-btn">
                                 <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search">Search</i>
+                                    <i class="fa fa-search"></i>
                                 </button>
                             </span>
                 </div>
