--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -21,7 +21,7 @@
         <%= f.text_area :description, size: '60x12' %>
     </p>
     <p>
-        <%= f.collection_select(:sport_id, @sports, :last, :first, {selected: params[:event][:sport_id]} ) %>
+        <%= f.collection_select(:sport_id, @sports, :last, :first, {selected: @sport_id} ) %>
     </p>
 
     <%= f.nested_fields_for :spoodle_dates do |ff| %>
