--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  *= require bootstrap.min
+ *= require half-slider
  *= require metisMenu.min
  *= require sb-admin-2
  *= require font-awesome
