--- a/app/assets/stylesheets/sb-admin-2.css
+++ b/app/assets/stylesheets/sb-admin-2.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    background-color: #f8f8f8;
+    background-color: #fff;
 }
 
 #wrapper {
@@ -29,6 +29,7 @@ body {
 
 .navbar-top-links {
     margin-right: 0;
+    margin-bottom: -20px;
 }
 
 .navbar-top-links li {
@@ -132,7 +133,7 @@ body {
         z-index: 1;
         position: absolute;
         width: 250px;
-        margin-top: 51px;
+        margin-top: 41px;
     }
 
     .navbar-top-links .dropdown-messages,
