Many view adjustments.

--- a/app/assets/stylesheets/sb-admin-2.css
+++ b/app/assets/stylesheets/sb-admin-2.css
@@ -348,3 +348,6 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
     color: #df8a13;
 }
+.navbar-right {
+    padding-right: 50px;
+}
