--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,32 +1,42 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username, autofocus: true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
-
-  <div><%= f.submit "Update" %></div>
+<h1 class="page-header">Edit <%= resource_name.to_s.humanize %></h1>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-group", html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+    <p>
+        <div><%= f.label :email %><br />
+            <%= f.email_field :email, class: "form-control", autofocus: true %>
+        </div>
+    </p>
+    <p>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+    </p>
+    <p>
+        <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+            <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
+        </div>
+    </p>
+    <p>
+        <div><%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+        </div>
+    </p>
+    <p>
+        <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+            <%= f.password_field :current_password, class: "form-control", autocomplete: "off" %>
+        </div>
+    </p>
+    <div style="float: left; width: auto;">
+        <div><%= f.submit "Update", class: "btn btn-success" %></div>
+    </div>
 <% end %>
+<div style="float: right; width: auto;">
+    <%= button_to 'Discard', authenticated_root_path, method: :get, class: "btn btn-warning" %>
+</div>
+<div class="row">
+    <br><br>
+</div>
+<hr>
+<h3>Cancel account</h3>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<p>Unhappy? <%= button_to "Cancel account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger btn-xs" %></p>
