--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,10 @@
     <h1 class="page-header">Dashboard</h1>
+    <% flash.each do |name, msg| -%>
+        <div class="alert alert-dismissable alert-info">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <%= msg %>
+        </div>
+    <% end -%>
 </div>
 <div class="col-lg-3 col-md-6">
     <div class="panel panel-success">
