--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,31 @@
     </button>
     <a class="navbar-brand" href="/"><%= fa_icon "trophy" %> <b>SPOODLE</b></a>
 </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    Signed in as:  <%= current_user.username %>
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to edit_user_registration_path do %>
+                            <%= fa_icon 'gear' %>
+                            Settings
+                        <% end %>
+                    </li>
+
+                    <li class="divider"></li>
+                    <li><%= link_to destroy_user_session_path, :method => :delete do %>
+                            <%= fa_icon 'sign-out' %>
+                            Logout
+                        <% end %>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div><!-- /.navbar-collapse -->
 <!-- /.navbar-header -->
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
@@ -37,11 +62,11 @@
             <li class="sidebar-search">
                 <div class="input-group custom-search-form">
                     <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </span>
                 </div>
                 <!-- /input-group -->
             </li>
@@ -75,16 +100,6 @@
             </li>
             <li>
                 <a href="#"><i class="fa fa-users fa-fw"></i> Friends</a>
-            </li>
-            <li><%= link_to edit_user_registration_path do %>
-                    <%= fa_icon 'gear' %>
-                    Settings
-                <% end %>
-            </li>
-            <li><%= link_to destroy_user_session_path, :method => :delete do %>
-                    <%= fa_icon 'sign-out' %>
-                    Logout
-                <% end %>
             </li>
         </ul>
     </div>
