--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,7 @@
     </button>
     <a class="navbar-brand" href="/"><%= fa_icon "trophy" %> <b>SPOODLE</b></a>
 </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -39,12 +38,17 @@
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to do %>
+                            <%= fa_icon 'user' %>
+                            Profile
+                        <% end %>
+                    </li>
+                    <li class="divider"></li>
                     <li><%= link_to edit_user_registration_path do %>
                             <%= fa_icon 'gear' %>
                             Settings
                         <% end %>
                     </li>
-
                     <li class="divider"></li>
                     <li><%= link_to destroy_user_session_path, :method => :delete do %>
                             <%= fa_icon 'sign-out' %>
@@ -59,17 +63,6 @@
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
-            <li class="sidebar-search">
-                <div class="input-group custom-search-form">
-                    <input type="text" class="form-control" placeholder="Search...">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </span>
-                </div>
-                <!-- /input-group -->
-            </li>
             <li>
                 <a class="active" href="/"><i class="fa fa-home fa-fw"></i> Dashboard</a>
             </li>
