--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,12 +14,12 @@
                     <i class="fa fa-calendar fa-5x"></i>
                 </div>
                 <div class="col-xs-9 text-right">
-                    <div class="huge">12</div>
+                    <div class="huge"><%= amount_upcoming %></div>
                     <div>Upcoming Events</div>
                 </div>
             </div>
         </div>
-        <%= link_to events_path do %>
+        <%= link_to upcoming_events_path do %>
             <div class="panel-footer">
                 <span class="pull-left">View Details</span>
                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -36,12 +36,12 @@
                     <i class="fa fa-spinner fa-5x"></i>
                 </div>
                 <div class="col-xs-9 text-right">
-                    <div class="huge">5</div>
+                    <div class="huge"><%= amount_pending %></div>
                     <div>Pending Events</div>
                 </div>
             </div>
         </div>
-        <%= link_to events_path do %>
+        <%= link_to pending_events_path do %>
             <div class="panel-footer">
                 <span class="pull-left">View Details</span>
                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -58,12 +58,12 @@
                     <i class="fa fa-flash fa-5x"></i>
                 </div>
                 <div class="col-xs-9 text-right">
-                    <div class="huge">124</div>
+                    <div class="huge"><%= amount_invited %></div>
                     <div>Invitations</div>
                 </div>
             </div>
         </div>
-        <%= link_to events_path do %>
+        <%= link_to invited_events_path do %>
             <div class="panel-footer">
                 <span class="pull-left">View Details</span>
                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -80,12 +80,12 @@
                     <i class="fa fa-folder fa-5x"></i>
                 </div>
                 <div class="col-xs-9 text-right">
-                    <div class="huge">13</div>
+                    <div class="huge"><%= amount_passed %></div>
                     <div>Passed Events</div>
                 </div>
             </div>
         </div>
-        <%= link_to events_path do %>
+        <%= link_to passed_events_path do %>
             <div class="panel-footer">
                 <span class="pull-left">View Details</span>
                 <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -96,6 +96,3 @@
     </div>
 </div>
 <div class="col-lg-12">
-
-
-<p>Logged in as: <%= current_user.username %></p>
