--- a/app/views/events/upcoming.html.erb
+++ b/app/views/events/upcoming.html.erb
@@ -19,7 +19,7 @@
                             </div>
 <% end %>
 <div class="table-responsive">
-    <table class="table table-bordered">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th>Title</th>
