--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
             <li>
-                <a class="active" href="/"><i class="fa fa-home fa-fw"></i> Dashboard</a>
+                <a href="/"><i class="fa fa-home fa-fw"></i> Dashboard</a>
             </li>
             <li>
                 <%= link_to upcoming_events_path do %>
