Many improvements for event#show.
Next up: create and populate user views!

--- a/app/assets/stylesheets/event.css.scss
+++ b/app/assets/stylesheets/event.css.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Event controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.cycling{
+  content:url("cycling128.png");
+}
+
+.running{
+  content:url("running128.png");
+}
+
+.boxing{
+  content:url("boxing128.png");
+}
+
+.soccer{
+  content:url("soccer128.png");
+}
