--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,16 +5,26 @@
         <%= msg %>
     </div>
 <% end %>
-<h3>Details</h3>
-<p>
-    <strong>Description: </strong><%= @event.description %>
+<div class="media">
+    <a class="media-left">
+        <img class="<%= @sport.downcase %>"/>
+    </a>
+    <div class="media-body">
+        <p>
+            <%= @sport %> event by <%= link_to @event.owner.username, @event.owner %>.
+            <%= @event.is_deadline_over? ? 'The deadline has passed.' : "You can assign to the proposed dates until "+@event.deadline.strftime("%A, %d. %B %Y at %R.") %>
+
+        </p>
+
+<strong>Description: </strong><%= @event.description %>
 </p>
 <p>
-    <strong>Deadline: </strong><%= @event.is_deadline_over? ? 'Over' : @event.deadline %>
 </p>
 <p>
-    <strong>Sport: </strong><%= @sport %>
 </p>
+    </div>
+</div>
+
 <hr>
 <h3>Invited</h3>
 
@@ -25,8 +35,22 @@
     <% end %>
 <hr>
 <h3>Dates</h3>
+<div class="row">
 <%= render @event.spoodle_dates %>
+</div>
 <hr>
-<%= link_to 'Destroy Event', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' } %> |
-<%= link_to 'Edit Event', edit_event_path(@event) %> |
-<%= link_to 'Back to Events', events_path %>
+<% if @event.belongs_to?(current_user) %>
+    <div style="float: left; width: auto;">
+         <%= button_to 'Edit Event', edit_event_path(@event), method: :get, class: "btn btn-info" %>
+    </div>
+    <div style="float: left; width: auto;">
+        <p>&nbsp;</p>
+    </div>
+    <div style="float: left; width: auto;">
+        <%= button_to 'Delete Event', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-primary" %>
+    </div>
+    <br/>
+    <br/>
+    <br/>
+<% end %>
+
