--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><%= link_to do %>
+                    <li><%= link_to current_user do %>
                             <%= fa_icon 'user' %>
                             Profile
                         <% end %>
@@ -68,22 +68,22 @@
             </li>
             <li>
                 <%= link_to upcoming_events_path do %>
-                    <i class="fa fa-calendar fa-fw"></i> Upcoming Events <span class="badge"><%= amount_upcoming %></span>
+                    <%= fa_icon 'calendar fw' %> Upcoming Events <span class="badge"><%= amount_upcoming %></span>
                 <% end %>
             </li>
             <li>
                 <%= link_to pending_events_path do %>
-                    <i class="fa fa-spinner fa-fw"></i> Pending Events <span class="badge"><%= amount_pending %></span>
+                    <%= fa_icon 'spinner fw' %> Pending Events <span class="badge"><%= amount_pending %></span>
                 <% end %>
             </li>
             <li>
                 <%= link_to events_path do %>
-                    <i class="fa fa-flash fa-fw"></i> My Events <span class="badge"><%= amount_own %></span>
+                    <%= fa_icon 'user fw' %> My Events <span class="badge"><%= amount_own %></span>
                 <% end %>
             </li>
             <li>
                 <%= link_to passed_events_path do %>
-                    <i class="fa fa-folder fa-fw"></i> Passed Events <span class="badge"><%= amount_passed %></span>
+                    <%= fa_icon 'folder fw' %> Passed Events <span class="badge"><%= amount_passed %></span>
                 <% end %>
             </li>
 
